# Python

Task1/: .gitignore  2026-03-27-products.csv  2026-03-28-products.csv  2026-03-29-products.csv  README.md  app.py  compare.py  database.py  price_changes.csv  products.db
Task10/: block.py  blockchain.py  merkletree.py  proofofwork.py  test.py  transaction.py  wallet.py
Task10/myenv/: pyvenv.cfg
Task11/: main.py
Task11/tester/: test.py
Task11/tests/: test_arith.py  test_auth.py  test_cart.py
Task12/: graph.py
Task13/: README.md  charts.py  db.py  generate_report.py  pdf_generate.py  sales.db  seed.py  send_email.py  template_render.py
Task13/reports/: report.html
Task14/: README.md  config.py  crawl_graph.json  crawler.py  exporter.py  main.py  robots_handler.py  sitemap.xml  urls.py
Task15/: cqrs.py
Task2/: README.md  app.py  chat.db  index.html  script.js  style.css
Task3/: README.md  orm.db  orm.py
Task4/: README.md  app.py  works.py
Task5/: ML_Pipeline.ipynb  README.md
Task6/: README.md  app.py  cache.py  circuit_breaker.py  config.py  orderservice.py  proxy_router.py  rate_limiter.py  userservice.py
Task7/: README.md  ast.py  code.txt  interpreter.py  lexer.py  main.py  parser.py
Task8/: README.md  app.py  email_alert.py  index.html  process.py  script.js  simulator.py  style.css
Task9/: pyproject.toml
Task9/app/: main.py  plugin_base.py  plugin_manager.py  registry.py
Task9/app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Task9/app/plugins/: dark_theme.py  light_theme.py  node_app.py  react_app.py
(+4 files in other folders)
